--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
 
   </div>
-  
+  <button class="start-btn">Start</button>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="game.js" charset="utf-8"></script>
 </body>
